RESOLVED FIXED245475
IPC::Connection::SyncMessageState does not support multiple runloops
https://bugs.webkit.org/show_bug.cgi?id=245475
Summary IPC::Connection::SyncMessageState does not support multiple runloops
Kimmo Kinnunen
Reported 2022-09-21 06:27:05 PDT
IPC::Connection::SyncMessageState does not support multiple runloops This would be needed for sending messages from Worker threads. This w
Attachments
Kimmo Kinnunen
Comment 1 2022-09-21 07:02:19 PDT
Radar WebKit Bug Importer
Comment 2 2022-09-21 07:22:05 PDT
EWS
Comment 3 2022-10-10 02:17:59 PDT
Committed 255334@main (452967ca0497): <https://commits.webkit.org/255334@main> Reviewed commits have been landed. Closing PR #4566 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.